test/expected/declare_o_plus2_rkd_rk.out
declare ++ as operator (reference to S, double) returning reference to S
                                        ^
41: error: invalid postfix non-member operator ++ parameter type "double"; must be "int" or a typedef thereof
